# cman

./: .gitmodules  CMakeLists.txt  CMakePresets.json  man.txt  notes.txt  usage.txt
libs/: CMakeLists.txt
libs/tree_sitter_cmake/: CMakeLists.txt
libs/tree_sitter_cmake/src/: CMakeLists.txt  parser.c
src/: CMakeLists.txt  main.cpp  project.cpp  project.hpp
src/utility/: assert.cpp  assert.h
templates/file_trees/: init.yml
templates/source_files/: cmake_root.cmake.tpl  main.cpp.tpl
tests/mockfiles/: toolchain.cmake
